# seLe4n

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Main.lean  PLAN.md  README.md  SeL4.lean  SeLe4.lean  SeLe4n.lean  T4D_PROOF_PLAN.md  THIRD_PARTY_LICENSES.md  lake-manifest.json  lakefile.lean  lakefile.toml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codebase_map_sync.yml  lean.yml  lean_action_ci.yml  lean_toolchain_update_proposal.yml  nightly_determinism.yml  platform_security_baseline.yml
SeL4/Execution/: Step.lean
SeL4/Model/: KernelState.lean  Syscall.lean  Types.lean
SeL4/Proofs/: InvariantLemmas.lean
SeL4/Refinement/: Simulation.lean
SeL4/Spec/: Capabilities.lean  IPC.lean  Objects.lean
SeLe4/: Machine.lean  Prelude.lean
SeLe4/Kernel/: API.lean
SeLe4/Model/: Object.lean  State.lean
SeLe4n/: Machine.lean  Prelude.lean
SeLe4n/Data/: RobinHoodHashMap.lean
SeLe4n/Kernel/: API.lean  CrossSubsystem.lean  CrossSubsystemPerCore.lean  CrossSubsystemPerCorePreservation.lean  FrozenOps.lean  PerCoreTimerEntry.lean  RadixTree.lean  RobinHood.lean  SchedContext.lean  SecondaryEntry.lean  SecureAPI.lean  SyscallDispatchEntry.lean
SeLe4n/Model/: Builder.lean  FreezeProofs.lean  FrozenState.lean  IntermediateState.lean  Object.lean  State.lean  ThreadQueue.lean
SeLe4n/Platform/: Boot.lean  Contract.lean  DeviceTree.lean  FFI.lean  Staged.lean
SeLe4n/Testing/: Deprecated.lean  Helpers.lean  InvariantChecks.lean  MainTraceHarness.lean  RuntimeContractFixtures.lean  StateBuilder.lean
dev_history/audits/: AUDIT_v0.9.0_WORKSTREAM_PLAN.md
dev_history/gitbook/: 23-m7-remediation-closeout-packet.md
docs/: AUDIT_NOTES.md  AUDIT_REMEDIATION_WORKSTREAMS.md  CI_POLICY.md  CI_TELEMETRY_BASELINE.md  CLAIM_EVIDENCE_INDEX.md  CLAUDE_HISTORY.md  COMPREHENSIVE_AUDIT_2026_02.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCS_DEDUPLICATION_MAP.md  DOCUMENTATION_SYNC_AND_COVERAGE_MATRIX.md  ENVIRONMENT.md  FINITE_OBJECT_STORE_ADR.md  HARDWARE_BOUNDARY_CONTRACT_POLICY.md  HARDWARE_TESTING.md  INFORMATION_FLOW_ROADMAP.md  ON_DESIGN_DECISION_ADR.md  PLATFORM_BINDING_ADR.md  PROJECT_AUDIT.md  REPOSITORY_AUDIT.md  SECURITY_ADVISORY.md  SEL4_SPEC.md  SPECIFICATION.md  TESTING_FRAMEWORK_PLAN.md  THREAT_MODEL.md  VSPACE_MEMORY_MODEL_ADR.md  WORKSTREAM_HISTORY.md  codebase_map.json
docs/audits/: AL0_baseline.txt  AUDIT_CODEBASE_2026-02-23.md  AUDIT_CODEBASE_FULL.md  AUDIT_CODEBASE_v0.11.7.md  AUDIT_CODEBASE_v0.12.15.md  AUDIT_v0.11.0.md  (+92 more)
execution_plans/: 00_INDEX.md  01_PURPOSE_AND_SCOPE.md  06_VALIDATION_PLAN.md
rust/: Cargo.toml  rust-toolchain.toml
rust/sele4n-abi/: Cargo.toml
rust/sele4n-abi/src/: decode.rs  encode.rs  ipc_buffer.rs  lib.rs  message_info.rs  registers.rs  trap.rs
rust/sele4n-abi/src/args/: cspace.rs  lifecycle.rs  mod.rs  page_perms.rs  sched_context.rs  service.rs  tcb.rs  type_tag.rs  vspace.rs
rust/sele4n-abi/tests/: conformance.rs
rust/sele4n-hal/: Cargo.toml  build.rs  link.ld
rust/sele4n-hal/src/: barriers.rs  boot.S  boot.rs  cache.rs  cmdline.rs  cpu.rs  ffi.rs  gic.rs  interrupts.rs  lib.rs  lock_bridge.rs  mmio.rs  mmu.rs  per_cpu.rs  per_cpu_stats.rs  profiling.rs  psci.rs  queued_rw_lock.rs  registers.rs  rw_lock.rs  shootdown.rs  smp.rs  svc_dispatch.rs  ticket_lock.rs  timer.rs  tlb.rs  trap.S  trap.rs  uart.rs  vectors.S
rust/sele4n-host/: Cargo.toml
rust/sele4n-host/src/: dispatch.rs  fixture.rs  lib.rs  runtime.rs  state.rs
rust/sele4n-host/tests/: scaffold.rs
rust/sele4n-sys/: Cargo.toml
rust/sele4n-sys/src/: cap.rs  cspace.rs  ipc.rs  lib.rs  lifecycle.rs  sched_context.rs  service.rs  tcb.rs  vspace.rs
rust/sele4n-types/: Cargo.toml
rust/sele4n-types/src/: error.rs  identifiers.rs  lib.rs  rights.rs  syscall.rs
scripts/: _common.sh  ak7_cascade_baseline.sh  ak7_cascade_check_monotonic.sh  audit_testing_framework.sh  build_observatory_data.py  bump_version.sh  check_bcm2712_freshness.sh  check_devicetree_legacy_consumers.sh  check_lifecycle_internal_allowlist.sh  check_lock_ffi_symmetry.sh  check_markdown_links.py  check_no_orphan_fields.sh  check_physical_address_width.sh  check_production_staging_partition.sh  check_proof_depth.py  check_version_sync.sh  check_website_links.sh  ci_capture_timing.sh  ci_flake_probe.sh  find_large_lean_files.sh  generate_codebase_map.py  generate_doc_navigation.py  hardware_test_env_setup.sh  install_git_hooks.sh  lifecycle_internal_allowlist.txt  pre-commit-lean-build.sh  report_current_state.py  scenario_catalog.py  setup_lean_env.sh  staged_module_allowlist.txt  sync_documentation_metrics.sh  sync_readme_from_codebase_map.sh  test_abi_roundtrip.sh  test_docs_sync.sh  test_fast.sh  test_full.sh  test_hw_crosscheck.sh  test_hw_full.sh  test_lib.sh  test_nightly.sh  (+29 more)
tests/: AbiRoundtripSuite.lean  Ak7RegressionSuite.lean  Ak8CoverageSuite.lean  Ak9PlatformSuite.lean  An10CascadeSuite.lean  An9HardwareBindingSuite.lean  AsidPoolSuite.lean  BadgeOverflowSuite.lean  CrossSubsystemPerCoreSuite.lean  DeadlockFreedomSuite.lean  DecodeValidationSuite.lean  DecodingSuite.lean  FreezeProofSuite.lean  FrozenOpsSuite.lean  FrozenStateSuite.lean  InformationFlowSuite.lean  InterruptDispatchSuite.lean  IpcBufferSuite.lean  KernelErrorMatrixSuite.lean  LivenessSuite.lean  LockBridgeSuite.lean  LockRefinementSuite.lean  LockSetSuite.lean  MemoryModelSuite.lean  ModelIntegritySuite.lean  NegativeStateSuite.lean  OperationChainSuite.lean  PerCoreSchedulerStateSuite.lean  PerCoreVectorSuite.lean  PerObjectLockSuite.lean  PriorityInheritanceSuite.lean  PriorityManagementSuite.lean  RadixTreeSuite.lean  RobinHoodSuite.lean  RwLockDeferredSuite.lean  RwLockSuite.lean  SchedulerInvariantPerCorePreservationSuite.lean  SchedulerInvariantPerCoreSuite.lean  SerializabilitySuite.lean  SmpCancellationSuite.lean  (+26 more)
web/: .gitignore  README.md
(+485 files in other folders)
