[workspace]
resolver = "2"
members = [
    "sele4n-types",
    "sele4n-abi",
    "sele4n-sys",
    "sele4n-hal",
]

[workspace.package]
# Version tracks the Lean lakefile.toml version (currently 0.27.8)
version = "0.27.9"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/hatter6822/seLe4n"
