[package]
name = "sele4n-hal"
description = "ARM64 Hardware Abstraction Layer for the seLe4n verified microkernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[features]
default = []
hw_target = []

[build-dependencies]
cc = "1.0"
