[package]
name = "sele4n-hal"
description = "ARM64 Hardware Abstraction Layer for the seLe4n verified microkernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[features]
default = []
hw_target = []

[build-dependencies]
# AN8-E (R-HAL-L3): pinned with explicit minimum versions matching the
# resolved versions in `Cargo.lock`. `cc` 1.2.x is required for the
# `find-msvc-tools` decoupling; pinning here makes the build-graph
# reproducible across `cargo update -w` runs.
cc = "1.2"
