[package]
name = "sele4n-hal"
description = "ARM64 Hardware Abstraction Layer for the seLe4n verified microkernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
# WS-SM SM5.H.4 audit: the HAL `SyscallId` mirror (svc_dispatch.rs) is hand-
# duplicated (zero runtime deps, by design).  This dev-dependency is used ONLY
# under `#[cfg(test)]` to cross-check the mirror's discriminants / COUNT / decode
# against the canonical `sele4n-types::SyscallId`, so a drift (e.g. a new syscall
# added to Lean + sele4n-types but not to the HAL mirror) fails the test build.
# `sele4n-types` is a leaf crate (no path deps), so this introduces no cycle and
# no runtime dependency.
sele4n-types = { path = "../sele4n-types" }

[features]
default = []
hw_target = []

[build-dependencies]
# AN8-E (R-HAL-L3): pinned with explicit minimum versions matching the
# resolved versions in `Cargo.lock`. `cc` 1.2.x is required for the
# `find-msvc-tools` decoupling; pinning here makes the build-graph
# reproducible across `cargo update -w` runs.
cc = "1.2"
